PDFLayoutAnalyzer fix some bugs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,5 +20,6 @@ dependencies = [
     "PyMuPDF",
     "PyYAML",
     "python-dateutil",
-    "pytz"
+    "pytz",
+    "pdf-craft[cuda]>=0.2.6", # or "pdf-craft[cpu]>=0.2.6" if you do not have a GPU
 ]
