--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,9 @@ dependencies = [
     "pdf-craft[cuda]>=0.2.6", # or "pdf-craft[cpu]>=0.2.6" if you do not have a GPU
     "pathvalidate>=3.3.1",
 ]
+
+[project.optional-dependencies]
+browser = [
+    "undetected-chromedriver>=3.5.5",
+    "selenium>=4.34.2",
+]
